# pybackup

./: .gitignore  README.md  crontab.example  data.db  pybackup.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pipeline.yml  publish.yml  quality.yml
pybackup/: __init__.py  auth.py  cli.py  constants.py
pybackup/config/: __init__.py  loader.py
pybackup/db/: __init__.py  base.py  database.py
pybackup/db/backends/: __init__.py  mongo_backend.py  mssql_backend.py  mysql_backend.py  postgres_backend.py  sqlite_backend.py
pybackup/engine/: __init__.py  base.py  files.py  manifest.py  mongo.py  mssql.py  mysql.py  postgres.py  verify.py
pybackup/server/: __init__.py  handlers.py  httpserver.py
pybackup/static/: index.html
pybackup/static/css/: app.css
pybackup/static/js/: app.js
pybackup/utils/: __init__.py  exceptions.py  logger.py  security.py
tests/: test_all.py
